feat: PR #29 M5 — BatchAnalyzer视角分组+代表回放选择
BatchAnalyzer: groupByPerspective(按BattleIdentity+team分组)
, resolveMode(基于scope+有效单元), selectRepresentative
Controller: 适配新ReplayFileAnalysisStatus API
新增1文件, 修改1文件